# nnInteractive

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  API_CHANGES_v2.md  CLAUDE.md  SERVER_CLIENT.md  pyproject.toml  readme.md
.github/workflows/: publish.yml
client/: pyproject.toml  readme.md
client/nnInteractive/inference/remote/: __init__.py
nnInteractive/: __init__.py
nnInteractive/inference/: inference_session.py
nnInteractive/inference/cvpr2025_challenge_baseline/: predict.py  predict.sh
nnInteractive/inference/remote/: __init__.py  _protocol.py  remote_session.py  serialization.py
nnInteractive/inference/server/: DOCKER.md  Dockerfile  app.py  docker-entrypoint.sh  main.py
nnInteractive/interaction/: point.py
nnInteractive/trainer/: nnInteractiveTrainer.py
nnInteractive/utils/: bboxes.py  crop.py  inference_helpers.py
