[project]
name = "nnInteractive"
version = "2.5.0"
requires-python = ">=3.10"
description = "Inference code for nnInteractive"
readme = "readme.md"
license = { file = "LICENSE" }
authors = [
    { name = "Fabian Isensee", email = "f.isensee@dkfz-heidelberg.de"},
    { name = "Helmholtz Imaging Applied Computer Vision Lab" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    'deep learning',
    'image segmentation',
    'semantic segmentation',
    'medical image analysis',
    'medical image segmentation',
    'nnU-Net',
    'nnunet'
]
dependencies = [
    # Default install is the full local + server stack (in-process inference engine
    # AND the official server). For a lightweight, torch-free REMOTE client, install
    # only the wire deps with --no-deps (see the [client] extra and readme.md):
    #   pip install --no-deps nnInteractive numpy httpx blosc2
    "nnunetv2>=2.7.0",
    "torch>=2.1.2,!=2.9.*",
    "acvl-utils>=0.2.3,<0.3",  # 0.3 may bring breaking changes. Careful!
    "batchgenerators>=0.25.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "blosc2",  # array (de)serialization on the client/server wire
    "huggingface_hub",  # model manifest discovery + checkpoint downloads (model_management)
    "numpy",
]

[project.urls]
homepage = "https://github.com/MIC-DKFZ/nnInteractive"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pre-commit"
]
# Wire-only dependency set for a lightweight, torch-free REMOTE client. The base
# install already includes these, so installing this extra normally does NOT make
# the install lighter (pip extras only add). It documents the exact deps a torch-free
# client needs and is intended for use with --no-deps, e.g. when embedding the remote
# client in a host with its own torch policy (such as 3D Slicer):
#   pip install --no-deps nnInteractive
#   pip install numpy httpx blosc2
client = [
    "numpy",
    "httpx>=0.27",
    "blosc2",
]

[project.scripts]
nninteractive-server = "nnInteractive.inference.server.main:main"
nninteractive-available-models = "nnInteractive.model_management:available_models_cli"
nninteractive-download-model = "nnInteractive.model_management:download_model_cli"

[build-system]
requires = ["setuptools>=67.8.0"]
build-backend = "setuptools.build_meta"

[tool.codespell]
skip = '.git,*.pdf,*.svg'
#
# ignore-words-list = ''

[tool.setuptools.packages.find]
where = ["."]
include = ["nnInteractive*"]